--- a/Crowded/app/src/main/AndroidManifest.xml
+++ b/Crowded/app/src/main/AndroidManifest.xml
@@ -8,16 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".view_locations"
-            android:label="view locations"
+        <activity android:name=".view_locations"></activity>
+        <activity android:name=".view_page"></activity>
+        <activity android:name=".login_screen"
+            android:label="login screen"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>>
         </activity>
-        <activity android:name=".view_page"></activity>
     </application>
 
 </manifest>
