--- a/Crowded/app/build.gradle
+++ b/Crowded/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
 
 android {
     compileSdkVersion 23
@@ -6,6 +8,7 @@ android {
 
     defaultConfig {
         applicationId "team11.crowded"
+        //applicationId "com.Krowded.app"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -23,4 +26,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.google.android.gms:play-services-auth:8.3.0'
+
 }
