--- a/Crowded/app/src/main/AndroidManifest.xml
+++ b/Crowded/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".view_locations"></activity>
         <activity android:name=".view_page"></activity>
-        <activity android:name=".add_Comment"></activity>
+        <activity android:name=".add_comment"></activity>
         <activity android:name=".login_screen"
             android:label="login screen"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
