--- a/Crowded/app/build.gradle
+++ b/Crowded/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services-auth:8.3.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
+    compile 'com.google.android.gms:play-services:8.3.0'
 }
