Added a starting splash screen!

--- a/Crowded/app/src/main/AndroidManifest.xml
+++ b/Crowded/app/src/main/AndroidManifest.xml
@@ -2,24 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="team11.crowded">
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view_locations"></activity>
-        <activity android:name=".view_page"></activity>
-        <activity android:name=".add_comment"></activity>
-        <activity android:name=".login_screen"
-            android:label="login screen"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        <activity android:name=".view_locations" />
+        <activity android:name=".view_page" />
+        <activity android:name=".add_comment" />
+        <activity
+            android:name=".splashScreen"
+            android:label="splashScreen"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>>
+            </intent-filter>
+            >
         </activity>
+
+        <activity android:name=".login_screen"/>
+
     </application>
 
 </manifest>
