--- a/Crowded/app/build.gradle
+++ b/Crowded/app/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services-auth:8.3.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
-    compile 'com.google.android.gms:play-services:8.3.0'
+   // compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.android.support:design:23.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
