--- a/Crowded/app/build.gradle
+++ b/Crowded/app/build.gradle
@@ -24,6 +24,9 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -41,6 +44,11 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.5.2'
    // compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:design:23.1.1'
+
+
+    //Testing Dependencies
+    //androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    //androidTestCompile 'com.android.support.test:runner:0.4.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
