--- a/Crowded/app/src/main/AndroidManifest.xml
+++ b/Crowded/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/krowdedicon"
-        android:label="Krowded"
+        android:label="Welcome to Krowded!"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".view_locations" />
@@ -23,7 +23,7 @@
             >
         </activity>
 
-        <activity android:name=".login_screen"/>
+        <activity android:name=".login_screen" />
 
     </application>
 
