--- a/Crowded/app/src/main/AndroidManifest.xml
+++ b/Crowded/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity android:name=".add_comment" />
         <activity
             android:name=".splashScreen"
-            android:label="splashScreen"
+            android:label="Krowded?"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
