--- a/Crowded/app/src/main/AndroidManifest.xml
+++ b/Crowded/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/krowdedicon"
-        android:label="Krowded!"
+        android:label="Krowded?"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".view_locations" />
