--- a/Crowded/app/build.gradle
+++ b/Crowded/app/build.gradle
@@ -41,22 +41,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile('junit:junit:4.12')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services-auth:8.3.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
-   // compile 'com.google.android.gms:play-services:8.4.0'
+    // compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:design:23.1.1'
-
     ////Dependencies for testing
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'com.android.support.test:rules:0.4.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support:support-annotations:23.1.1'
-
-
-
 }
 
 apply plugin: 'com.google.gms.google-services'
